# minCoreLang

./: .gitignore  README.md  compile.sh  compile_n_test.sh  compiled.mar  pyproject.toml  test_lang.py  test_scenario.py
mal/: ComputeResources.mal  DataResources.mal  IAM.mal  Networking.mal  User.mal
src/main/mal/: ComputeResources.mal  DataResources.mal  IAM.mal  Networking.mal  User.mal  Vulnerability.mal  main.mal
src/main/resources/: org.mal-lang.minCoreLang-1.0.0.mar
src/main/resources/attacks/: apt29_scenario1.txt
src/main/resources/scenarios/: apt29_scenario1.yml
